--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -36,6 +36,28 @@
       }
     }
   }
+  &__projects--hidden {
+    .sidebar__expansion-toggle {
+      .sidebar__btn--toggle {
+        span {
+          background-color: 
+          svg {
+            position: absolute;
+            top: 0.2rem;
+            left: 0.3;
+
+          }
+        }
+        
+      }
+    }
+    .sidebar__projects-list {
+      display: none;
+    }
+  } 
+
+
+  
   &__projects {
     margin-top: 2rem;
     .sidebar__expansion-toggle {
@@ -46,6 +68,7 @@
 
       .sidebar__btn--toggle {
         display: flex;
+        align-items: center;
         flex: 1;
         width: 100%;
         span {
@@ -58,9 +81,6 @@
           margin-right: 1rem;
           svg {
             transform: rotate(90deg);
-            position: absolute;
-            top: 0.2rem;
-            left: 0.3;
           }
         }
       }
@@ -73,8 +93,8 @@
         }
       }
     }
-  }
-  &__projects-list {
+  .sidebar__projects-list {
+
     padding: 0;
     .sidebar__project {
       @include project-style;
@@ -89,7 +109,11 @@
         justify-content: center;
         width: 2.5rem;
         height: 2.5rem;
+        margin-right: 1rem;
       }
     }
   }
+  }
+   
+  
 }
