add active project sidebar generic

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,6 +1,10 @@
 @mixin project-style {
   cursor: pointer;
+  border-radius: 5px;
   &:hover {
+    background-color: #fff;
+  }
+  &.active {
     background-color: #fff;
   }
 }
