--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -40,24 +40,19 @@
     .sidebar__expansion-toggle {
       .sidebar__btn--toggle {
         span {
-          background-color: 
-          svg {
+          background-color: svg {
             position: absolute;
             top: 0.2rem;
             left: 0.3;
-
           }
         }
-        
       }
     }
     .sidebar__projects-list {
       display: none;
     }
-  } 
+  }
 
-
-  
   &__projects {
     margin-top: 2rem;
     .sidebar__expansion-toggle {
@@ -93,27 +88,24 @@
         }
       }
     }
-  .sidebar__projects-list {
-
-    padding: 0;
-    .sidebar__project {
-      @include project-style;
-      font-size: 1.4rem;
-      display: flex;
-      align-items: center;
-      padding: 5px 16px 5px 5px;
-
-      span {
+    .sidebar__projects-list {
+      padding: 0;
+      .sidebar__project {
+        @include project-style;
+        font-size: 1.4rem;
         display: flex;
         align-items: center;
-        justify-content: center;
-        width: 2.5rem;
-        height: 2.5rem;
-        margin-right: 1rem;
+        padding: 5px 16px 5px 5px;
+
+        span {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 2.5rem;
+          height: 2.5rem;
+          margin-right: 1rem;
+        }
       }
     }
   }
-  }
-   
-  
 }
