--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -1,3 +1,5 @@
+@import 'mixins';
+@import 'variables';
 .modal {
   position: fixed;
   left: 30%;
@@ -6,6 +8,23 @@
   border: 1px solid transparent;
   border-radius: 5px;
   width: 40%;
+  max-width: 500px;
   background-color: #ffffff;
-  padding: 0 auto;
+  transition: transform 0.6s ease-in-out;
+  &__children {
+    margin: 2rem;
+  }
+  &__footer {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 2rem;
+  }
+  &__btn--success {
+    @include btn-style($generic-bg, 70px, #fff);
+    padding: 1rem;
+    margin: 0 1rem;
+  }
+  &__btn--cancel {
+    @include btn-style($sidebar-bg, 70px, #000);
+  }
 }
