--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -15,6 +15,10 @@
   color: $color;
   width: $width;
   border-radius: 5px;
+  padding: 1rem;
+  margin: 0 1rem;
+  border: 1px solid transparent;
+
   &:hover {
     border: 1px #000 solid;
   }
