--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -2,15 +2,19 @@
 @import 'variables';
 .modal {
   position: fixed;
-  left: 30%;
-  top: 35%;
+  left: 30vw;
+  top: 25%;
   z-index: 100;
   border: 1px solid transparent;
   border-radius: 5px;
-  width: 40%;
+  width: 40vw;
   max-width: 500px;
   background-color: #ffffff;
   transition: transform 0.6s ease-in-out;
+  input {
+    width: 100%;
+    line-height: 2rem;
+  }
   &__children {
     margin: 2rem;
   }
