--- a/src/styles/_App-header.scss
+++ b/src/styles/_App-header.scss
@@ -4,8 +4,9 @@
 /** ================== */
 .header {
   background-color: $generic-bg;
-  position: relative;
-  z-index: 20;
+  position: fixed;
+  width: 100%;
+  z-index: 30;
   height: 4rem;
   font-size: 1.4rem;
   display: flex;
