--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -11,6 +11,7 @@
   padding-top: 7rem;
   padding-left: 4rem;
   overflow: scroll;
+  z-index: 10;
   &__generic {
     display: flex;
     flex-direction: column;
@@ -82,6 +83,8 @@
         flex: 1;
         align-items: center;
         @include project-style;
+        position: relative;
+        z-index: 10;
         .sidebar__project-title {
           display: flex;
           align-items: center;
