--- a/src/styles/_task.scss
+++ b/src/styles/_task.scss
@@ -1,4 +1,5 @@
 .task {
+  position: relative;
   width: 100%;
   max-width: 80rem;
   margin: 0;
@@ -8,6 +9,7 @@
   align-items: center;
   justify-content: space-between;
   height: 2.5rem;
+  z-index: 0;
   &__content {
     display: flex;
     justify-content: space-between;
